--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fin for Platforms</title>
+  <title>Sip of Freedom</title>
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- Cookie Reset Script -->
