--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <script>
     window.intercomSettings = {
       api_base: "https://api-iam.intercom.io",
-      app_id: "kt6kiz1d"
+      app_id: "mw2u5h8i"
     };
   </script>
   
